--- a/client/src/styles/navbar/Navbar.css
+++ b/client/src/styles/navbar/Navbar.css
@@ -171,7 +171,6 @@ nav.nav-detail-scrolled .action-item:hover {
   align-items: center;
   gap: 2rem;
   flex: 0 0 auto;
-  margin-right: 16px;
 }
 
 .action-item {
